image cropper overflow fixed

--- a/frontend/curiosity/src/app/about/about.component.scss
+++ b/frontend/curiosity/src/app/about/about.component.scss
@@ -28,5 +28,10 @@ li {
 }
 
 ul {
-    padding-left: 0.5em;
+    padding-left: 1em;
+}
+
+li, p {
+    font-size: 0.95em;
+    color: var(--dark-white);
 }
