--- a/frontend/curiosity/src/app/image-cropper-uploader/image-cropper-uploader.component.scss
+++ b/frontend/curiosity/src/app/image-cropper-uploader/image-cropper-uploader.component.scss
@@ -5,14 +5,14 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
+        width: 100vw;
         height: 100%;
         place-items: center;
         background-color: rgba(0, 0, 0, 0.64);
     }
 
     img {
-        max-height: 80vh !important;
+        max-height: 70vh !important;
         object-fit: contain !important;
     }
 
